# configuror

./: README.md  configuror.py  flake.nix  pyproject.toml
